crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_future_feature.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_future_feature.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..39,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..38,
                    module: Some(
                        Identifier {
                            id: Name("__future__"),
                            range: 5..15,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 23..38,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("invalid_feature"),
                                range: 23..38,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | from __future__ import invalid_feature
  |                        ^^^^^^^^^^^^^^^ Syntax Error: Future feature `invalid_feature` is not defined
  |
